[gd_scene load_steps=6 format=3 uid="uid://c2i06hr5ma8ne"]

[ext_resource type="Script" path="res://GameStartButton.gd" id="1_56kpn"]
[ext_resource type="Script" path="res://hud.gd" id="1_ml0cu"]

[sub_resource type="InputEventKey" id="InputEventKey_4n70e"]
device = -1
keycode = 4194309

[sub_resource type="InputEventKey" id="InputEventKey_0ja2y"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_k78p7"]
events = [SubResource("InputEventKey_4n70e"), SubResource("InputEventKey_0ja2y")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ml0cu")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 2.0
offset_top = -17.0
offset_right = 75.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 70
text = "0"

[node name="Message" type="Label" parent="."]
offset_left = 309.0
offset_top = 133.0
offset_right = 552.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 74
text = "Avoid the pipes"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GameStartButton" type="Button" parent="."]
offset_left = 293.0
offset_top = 537.0
offset_right = 588.0
offset_bottom = 652.0
theme_override_font_sizes/font_size = 78
shortcut = SubResource("Shortcut_k78p7")
text = "Start"
script = ExtResource("1_56kpn")

[node name="HighscoreLabel" type="Label" parent="."]
offset_left = 9.0
offset_top = 705.0
offset_right = 394.0
offset_bottom = 795.0
theme_override_font_sizes/font_size = 65
text = "Highscore: 0"

[connection signal="pressed" from="GameStartButton" to="GameStartButton" method="_on_pressed"]
[connection signal="start_game_pressed" from="GameStartButton" to="." method="_on_game_start_button_start_game_pressed"]
